in progress. added first updates for header , social and footer 14 / 24 passed so far

--- a/index.html
+++ b/index.html
@@ -14,21 +14,28 @@
       src="https://kit.fontawesome.com/5b12ffad4b.js"
       crossorigin="anonymous"
     ></script>
+	
   </head>
 
   <body>
     <div>
       <!-- header -->
-      <header>
+      <header id="home">
         <div>
           <h1><a href="index.html">BLOOMTECH BAR AND GRILL</a></h1>
           <!-- nav -->
-          <nav>
+          <nav class="links">
             <a href="menu.html">Menu</a>
             <a href="#">Reservations</a>
             <a href="#">Special Offers</a>
             <a href="#">Contact</a>
           </nav>
+		  <div class="social">
+
+			<i class="fa-brands fa-facebook-square"></i>
+			<i class="fa-brands fa-twitter-square"></i>
+			<i class="fa-brands fa-instagram-square"></i>
+		  </div>
         </div>
       </header>
 
