--- a/menu.html
+++ b/menu.html
@@ -27,6 +27,20 @@
           <!-- nav -->
           <nav class="links">
             <a href="menu.html">Menu</a>
+            <a href="">Reservations</a>
+            <a href="">Special Offers</a>
+            <a href="">Contact</a>
+          </nav>
+          
+          <div class="social">
+            <a href="http://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
+            <a href="http://www.twitter.com" target="_blank" ><i class="fa-brands fa-twitter-square"></i></a>
+            <a href="http://www.instagram.com" target="_blank" ><i class="fa-brands fa-instagram-square"></i></a>
+          </div>
+        </div>
+          <!-- nav -->
+          <nav class="links">
+            <a href="menu.html">Menu</a>
             <a href="#">Reservations</a>
             <a href="#">Special Offers</a>
             <a href="#">Contact</a>
