--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
         <div class="about-container">
           <h2>ABOUT US</h2>
 
-          <div id="cooks" class="pic"></div>
-
+          <!-- <div id="cooks" class="pic"></div> -->
           <div class="text">
             <h3>Good Food, Great People</h3>
             <p>
