passed all tests

--- a/index.html
+++ b/index.html
@@ -29,11 +29,17 @@
             <a href="">Special Offers</a>
             <a href="">Contact</a>
           </nav>
-          
+
           <div class="social">
-            <a href="http://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
-            <a href="http://www.twitter.com" target="_blank" ><i class="fa-brands fa-twitter-square"></i></a>
-            <a href="http://www.instagram.com" target="_blank" ><i class="fa-brands fa-instagram-square"></i></a>
+            <a href="http://www.facebook.com" target="_blank"
+              ><i class="fa-brands fa-facebook-square"></i
+            ></a>
+            <a href="http://www.twitter.com" target="_blank"
+              ><i class="fa-brands fa-twitter-square"></i
+            ></a>
+            <a href="http://www.instagram.com" target="_blank"
+              ><i class="fa-brands fa-instagram-square"></i
+            ></a>
           </div>
         </div>
       </header>
@@ -136,8 +142,18 @@
 
         <div class="signup-form">
           <p>Join our mailing list!</p>
-          <input type="email" pattern=".+@globex\.com" size="30" required name="Email Address" id="Email Address" placeholder="Email Address" value="Email Address" />
-          <input type="button" placeholder="Sign Up" value="Sign Up" />
+          <input
+            type="email"
+            pattern=".+@globex\.com"
+            size="30"
+            required
+            name="email"
+            id="Email Address"
+            placeholder="Email Address"
+            value="Email Address"
+          >
+          
+          <button class="" type="button">Sign Up</button>
         </div>
         <!-- nav -->
         <nav class="nav-footer">
