--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
   <body>
     <div>
       <!-- header -->
-      <header id="menu">
+      <header id="home">
         <div>
           <h1><a href="index.html">BLOOMTECH BAR AND GRILL</a></h1>
           <!-- nav -->
@@ -30,19 +30,13 @@
             <a href="">Reservations</a>
             <a href="">Special Offers</a>
             <a href="">Contact</a>
-          </nav>
 
-          <div class="social">
-            <a href="http://www.facebook.com" target="_blank"
-              ><i class="fa-brands fa-facebook-square"></i
-            ></a>
-            <a href="http://www.twitter.com" target="_blank"
-              ><i class="fa-brands fa-twitter-square"></i
-            ></a>
-            <a href="http://www.instagram.com" target="_blank"
-              ><i class="fa-brands fa-instagram-square"></i
-            ></a>
-          </div>
+            <div class="social">
+              <i class="fa-brands fa-facebook-square"></i>
+              <i class="fa-brands fa-twitter-square"></i>
+              <i class="fa-brands fa-instagram-square"></i>
+            </div>
+          </nav>
         </div>
       </header>
 
