--- a/index.html
+++ b/index.html
@@ -28,19 +28,13 @@
             <a href="">Reservations</a>
             <a href="">Special Offers</a>
             <a href="">Contact</a>
-          </nav>
 
-          <div class="social">
-            <a href="http://www.facebook.com" target="_blank"
-              ><i class="fa-brands fa-facebook-square"></i
-            ></a>
-            <a href="http://www.twitter.com" target="_blank"
-              ><i class="fa-brands fa-twitter-square"></i
-            ></a>
-            <a href="http://www.instagram.com" target="_blank"
-              ><i class="fa-brands fa-instagram-square"></i
-            ></a>
-          </div>
+            <div class="social">
+              <i class="fa-brands fa-facebook-square"></i>
+              <i class="fa-brands fa-twitter-square"></i>
+              <i class="fa-brands fa-instagram-square"></i>
+            </div>
+          </nav>
         </div>
       </header>
 
@@ -151,8 +145,8 @@
             id="Email Address"
             placeholder="Email Address"
             value="Email Address"
-          >
-          
+          />
+
           <button class="" type="button">Sign Up</button>
         </div>
         <!-- nav -->
